fixed navbar spacing

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -22,7 +22,9 @@ nav {
 nav ul {
     width: 80%;
 }
-
+nav div{
+    justify-content: right;
+}
 .navigation {
     display: flex;
 }
