--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -12,6 +12,9 @@
 
 /*----------- NAVIGATION --------------*/
 
+nav ul {
+  width: 40%;
+}
 
 /*----------- MAIN --------------*/
 
