--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -58,31 +58,35 @@ header h2 {margin: 0; font-weight: normal; padding-top:5px;}
 
 /*----------- NAVIGATION --------------*/
 nav {
-    background-color: var(--secondary-color);
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    align-items: center;
 }
+
 nav div a {
     margin-right: 2px;
     margin-left: 2px;
 }
 nav div {
-    margin-right: 15px;
-    margin-left: 15px;
+    background-color: var(--secondary-color);
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+    height: 2.15rem;
+    display: flex;
 }
+
 nav div a img{
-  
-    height: 100%;
-    vertical-align: middle
+margin-top: 5px;
 }
+
 nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    width: 20%;
+    width: 80%;
+    background-color: var(--secondary-color);
 }
 
 nav ul li a {
@@ -158,12 +162,69 @@ section {
     border: 1px solid silver;
     margin: 0.2em;
     padding: 0.5em;
-    min-height: 10em;
+    min-height: 12em;
+}
+
+.hero-action {
+position:relative;
+overflow:hidden;
+padding: 0;
+border: 0;
+}
+
+.hero-action h2 {
+    position:absolute;
+    margin: 1.5rem;
+    color:#85e3ff;
+    text-shadow:  2px 2px #000000;
+}
+
+.hero-action button {
+    position:absolute;
+    right: 2rem;
+    bottom: 1rem;
+}
+
+.hero-action img{
+    position:absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.text-center{
+    text-align:center;
 }
 
 .content section:nth-child(7) { /*JOIN SECTION*/
 display: none;
 }
+
+
+
+button {
+    padding: 0.6rem;
+    border-radius: 16px;
+    background-color:#53bf73;
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 2px 4px, rgba(0, 0, 0, 0.5) 0px 7px 13px -3px, rgba(0, 0, 0, 0.3) 0px -3px 0px inset;
+}
+
+button:hover {
+    background-color:#8affad;
+    cursor: pointer;
+}
+
+.join {
+    display: flex;
+    justify-content: center;
+    text-align:center;
+}
+
+.join button {
+    width:90%;
+    margin: 0 auto;
+}
+
 
 /*----------- FOOTER --------------*/
 footer {
